--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>crystal collector game, week 4</title>
+  <title>hearts collector game, week 4</title>
 
   <link rel="stylesheet" href="assets/css/reset.css">
   <!-- Added link to the jQuery Library -->
@@ -16,18 +16,18 @@
 <div class="container">
 
 
-    <div id="title-box">Crystals Collector!</div>
+    <div id="title-box">Heartss Collector!</div>
 
     <div id="instruction-box">
         <p>You will be given a random number at the start of the game.</p>
         <br>
-        <p>There are 4 crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+        <p>There are 4 hearts below. By clicking on a heart you will add a specific amount of points to your total score.</p>
         <br>
         <p>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</p>
         <br>
-        <p>The value of each crystal is hidden from you until you click on it.</p>
+        <p>The value of each heart is hidden from you until you click on it.</p>
         <br>
-        <p>Each time when the games starts, the game will change the values of each crystal.</p>
+        <p>Each time when the games starts, the game will change the values of each heart.</p>
     </div>
 
     <div id="computer-number"></div>
@@ -56,7 +56,7 @@
 </div>
   
 
-  </script>
+  
 
 </body>
 </html>
